# turbo-ea

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BPM_MODULE_SPEC.md  CALCULATED_FIELDS_SPEC.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  OPTIMIZATION_REPORT.md  PLAN.md  README.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  Statement_of_Architecture_Work_Template.md  TEST_COVERAGE_ANALYSIS.md  TEST_IMPROVEMENT_PLAN.md  THIRD-PARTY-NOTICES.md  TODO.md  VERSION  architecture-roadmap-planning-module.md  docker-compose.db.yml  docker-compose.observability.yml  docker-compose.yml  docs-internal-tagging-plan.md  iwanttobuildprecioustulip.md  matrix-hierarchical-headers-plan.md  mkdocs.yml  plan.md  plan.survey.md  requirements-docs.txt  restore_option_keys.sql  servicenow-integration-plan.md  turbo-ea-rbac-spec.md  turbo-ea-security-audit.md  turbo-ea-terminology-migration-claude-code.md
.devcontainer/: devcontainer.json  setup-demo.sh
.github/: CODEOWNERS  FUNDING.yml  SECURITY_PIPELINE.md  dependabot.yml  pull_request_template.md  trivy-allowlist
archimate-lang/: langium-config.json  package-lock.json  package.json  tsconfig.json
backend/: Dockerfile  alembic.ini  pyproject.toml
dev/: README.md  docker-compose.dev.yml
docs/: TEST_COVERAGE.md  discussion-pr-process.md  i18n-plan.md  (+11 more)
store-server/: README.md  docker-compose.store.yml  pyproject.toml
store-server/tests/: test_store.py
store-server/turbo_ea_store/: __init__.py  __main__.py  app.py  config.py  db.py  licensing.py  models.py  stripe_gateway.py
(+1726 files in other folders)
