[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "turbo-ea-store"
version = "0.0.0"
description = "Turbo EA Extension Store server — catalog, Stripe billing, license issuance, bundle downloads"
license = "FSL-1.1-MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20.0",
    "stripe>=10.0.0",
    "cryptography>=43.0.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]
postgres = [
    "asyncpg>=0.30.0",
]

[tool.setuptools.packages.find]
include = ["turbo_ea_store*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
